--- a/main.css
+++ b/main.css
@@ -14,11 +14,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.title,
-.footer {
+.title {
 
     padding: 25px;
-    background-color: rgb(44, 44, 44);
+    background-color:#2c3e50;
     color: white;
     text-align: center;
 
@@ -121,7 +120,7 @@ body {
 
 .card-subtitle {
     font-size: 1.2rem;
-    color: #6c757d;
+    color: #2c3e50;
     margin: 0 0 10px;
 }
 
@@ -129,4 +128,17 @@ body {
     font-size: 1rem;
     color: #343a40;
     line-height: 1.5;
+}
+
+.footer {
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 20px 10px;
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.footer p {
+    margin: 5px 0;
 }
